--- a/style.css
+++ b/style.css
@@ -18,162 +18,13 @@
     border: none;
     outline: none;
     cursor: pointer;
-    z-index: 1;
+    z-index: 1001;
 }
 #btnScrollToTop:active {
     background: darkslateblue;
 }
 
-.christmas-lights li {
-    --christmas-lights-1: #057d70; /*color - 1*/
-    --christmas-lights-2: #d41a21; /*color - 2*/
-    --christmas-lights-3: #ffd27c; /*color - 3*/
-    animation-duration: 2s;
-    animation-fill-mode: both;
-    animation-iteration-count: infinite;
-    animation-name: flash-1;
-    border-radius: 50%;
-    display: inline-block;
-    height: 20px;
-    margin: 25px 20px;
-    position: relative;
-    width: 20px;
-}
-  
-.christmas-lights {
-    left: 0;
-    margin: 0;
-    pointer-events: none;
-    position: fixed;
-    right: 0;
-    top: -15px;
-    white-space: nowrap;
-    width: 100%;
-    z-index: 100;
-}
-  
-.christmas-lights[data-position="bottom"] {
-    top: auto;
-    bottom: -15px;
-    transform:scale(-1)
-}
-  
-.christmas-lights[data-position="right"],
-.christmas-lights[data-position="left"] {
-    transform: rotate(-90deg);
-    left: -10px;
-    top: 0;
-    right: auto;
-    bottom: 0;
-    width: 100vh;
-}
-  
-.christmas-lights[data-position="right"] {
-    transform: rotate(90deg);
-    left: auto;
-    right: -15px;
-}
-  
-.christmas-lights li:before {
-    content: "";
-    position: absolute;
-    background: #505050;
-    width: 10px;
-    height: 10px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    top: -9px;
-    left: 5px;
-}
-  
-.christmas-lights li:after {
-    content: "";
-    top: -23px;
-    left: 10px;
-    position: absolute;
-    width: 60px;
-    height: 20px;
-    border-bottom: solid #505050 2px;
-    border-radius: 50%;
-}
-  
-.christmas-lights li:last-child:after {
-    content: none;
-}
-  
-.christmas-lights li:first-child {
-    margin-left: -40px;
-}
-  
-.christmas-lights li:nth-child(2n+1) {
-    background: var(--christmas-lights-1);
-    box-shadow: 0px 5px 24px 3px rgb(249 212 129);
-    animation-name: flash-2;
-    animation-duration: 0.4s;
-}
-  
-.christmas-lights li:nth-child(4n+2) {
-    background: var(--christmas-lights-2);
-    box-shadow: 0px 5px 24px 3px var(--christmas-lights-2);
-    animation-name: flash-3;
-    animation-duration: 1.1s;
-}
-  
-.christmas-lights li:nth-child(odd) {
-    animation-duration: 1.8s;
-}
-  
-.christmas-lights li:nth-child(3n+1) {
-      animation-duration: 1.4s;
-}
-  
-@keyframes flash-1 {
-    0%, 100% {
-        background: var(--christmas-lights-1);
-        box-shadow: 0px 5px 24px 3px var(--christmas-lights-1);
-    }
-    50% {
-        background: var(--christmas-lights-2);
-        box-shadow: 0px 5px 24px 3px var(--christmas-lights-2);
-    }
-}
-  
-@keyframes flash-2 {
-    0%, 100% {
-        background: var(--christmas-lights-2);
-        box-shadow: 0px 5px 24px 3px var(--christmas-lights-2);
-    }
-    50% {
-        background: var(--christmas-lights-3);
-        box-shadow: 0px 5px 24px 3px var(--christmas-lights-3);
-    }
-}
-  
-@keyframes flash-3 {
-    0%, 100% {
-        background: var(--christmas-lights-3);
-        box-shadow: 0px 5px 24px 3px var(--christmas-lights-3);
-    }
-    50% {
-        background: var(--christmas-lights-1);
-        box-shadow: 0px 5px 24px 3px var(--christmas-lights-1);
-    }
-}
- 
-@media (max-width: 1024px){
-  .christmas-lights[data-position="left"] {
-      left: -14px;
-  }
- 
-  .christmas-lights[data-position="right"] {
-      right: -14px;
-  }
-   
-  .christmas-lights[data-position="left"],
-  .christmas-lights[data-position="right"] {
-    height: 100vh;
-  }
-}
+
 
 #snow {
     position: fixed;
@@ -185,6 +36,87 @@
     z-index: 1000;
 }
 
-.color {
-    color: yellow;
+
+.dropdown {
+    min-width: 15em;
+    position: relative;
+    
+    
+}
+
+.dropdown *{
+    box-sizing: border-box;
+}
+.select {
+    background: #2a2f3b;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px #2a2f3b solid;
+    border-radius: 0.5em;
+    padding: 1em;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.select-clicked {
+    border: 2px #26489a solid;
+    box-shadow: 0 0 0.8em #26489a;
+}
+
+.select:hover {
+    background: #323741;
+}
+
+.caret {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 6px solid #fff;
+    transform: 0.3s;
+}
+
+.caret-rotate {
+    transform: rotate(180deg);
+}
+
+.menu {
+    list-style: none;
+    padding: 0.2em 0.5em;
+    background: #323741;
+    border: 1px #363a43 solid;
+    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+    border-radius: 0.5em;
+    color: #9fa5b5;
+    position: absolute;
+    top: 3em;
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
+    opacity: 0;
+    display: none;
+    transition: 0.2s;
+    z-index: 1;
+}
+
+.menu li {
+    padding: 0.7em 0.5em;
+    margin: 0.3em 0;
+    border-radius: 0.5em;
+    cursor: pointer;
+}
+
+.menu li:hover {
+    background: #2a2d35;
+}
+
+.active {
+    background: #23242a;
+}
+
+.menu-open {
+    display: block;
+    opacity: 1;
 }
