--- a/style.css
+++ b/style.css
@@ -120,3 +120,46 @@
     display: block;
     opacity: 1;
 }
+
+.snow, snow:after, .snow:before {
+    content: "";
+    position: absolute;
+    top: -650px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: 
+    radial-gradient(4px 4px at 100px 50px, #fff, transparent),
+    radial-gradient(6px 6px at 200px 150px, #fff, transparent),
+    radial-gradient(3px 3px at 300px 250px, #fff, transparent),
+    radial-gradient(4px 4px at 400px 350px, #fff, transparent),
+    radial-gradient(6px 6px at 500px 100px, #fff, transparent),
+    radial-gradient(3px 3px at 50px 200px, #fff, transparent),
+    radial-gradient(4px 4px at 150px 300px, #fff, transparent),
+    radial-gradient(6px 6px at 250px 400px, #fff, transparent),
+    radial-gradient(3px 3px at 350px 500px, #fff, transparent);
+    background-size: 650px 650px;
+    animation: snowAnim 15s linear;
+    animation-iteration-count: infinite;
+}
+
+.snow:after {
+    margin-left: -250px;
+    opacity: .5;
+    filter: blur(2px);
+}
+.snow:before {
+    margin-left: -350px;
+    opacity: .7;
+    filter: blur(1px);
+}
+
+@keyframes snowAnim {
+    from {
+        transform: translateY(0);
+    }
+    to {
+        transform: translateY(650px);
+    }
+}
+
