--- a/style.css
+++ b/style.css
@@ -266,66 +266,15 @@ background: linear-gradient(90deg, orangered, orange);
 }
 }
 
-.container3 {
-    position: absolute;
-    top: 80px;
-    right: 100px;
-    left: 100px;
-    bottom: 80px;
-    background: url(images/R.jfif);
-    background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: 50px 50px rgba(0, 0, 0, 0.5),
-                0 0 0 100px rgba(0, 0, 0, 0.1);
+.hidden1 {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
 }
 
-.container3 h2 {
-    text-align: center;
-    font-size: 10em;
-    line-height: 0.7em;
-    color: #333;
-    margin-top: -80px;
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
 }
-
-.container3 h2 span {
-    display: block;
-    font-weight: 300;
-    letter-spacing: 6px;
-    font-size: 0.2em;
-}
-
-.countdown {
-    display: flex;
-    margin-top: 50px;
-}
-
-.countdown div {
-    position: relative;
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    text-align: center;
-    color: #fff;
-    margin: 0 15px;
-    font-size: 3em;
-    font-weight: 500;
-
-}
-
-.countdown div:before {
-    content: "";
-    position: absolute;
-    bottom: -30px;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    background: #ff0;
-    color: #333;
-    font-style: 0.35em;
-    line-height: 35px;
-    font-weight: 300;
-}
-
